--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/dist/global.css">
     <link rel="stylesheet" href="/dist/main.js">
 
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src='/dist/background.js' defer></script>
     <script src='/dist/nav.js' defer></script>
