Added PS3 Projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,7 +46,41 @@
             <!-- Entry point of the website -->
             <div class="body">
                 <h1>Projects</h1>
-                <p>Projects Coming Soon</p>
+                <br><br>
+
+                <div class="body-container">
+                    <div class="project">
+                        <div class="project-title">
+                            <h2>Rock Paper Scissors PS3 Game</h2>
+                        </div>
+                        <div class="project-description">
+                            <p>A GUI Text-Based Game for the PS3, Simple UI and Controls. Used in the PS3 Game Video
+                            </p>
+                        </div>
+                        <div class="project-actions">
+                            <button><a href="https://github.com/FrontendTitan/Rock-Paper-Scissors-PS3"
+                                    target='_blank'>View
+                                    Source</a></button>
+                            <button><a
+                                    href="https://github.com/FrontendTitan/Rock-Paper-Scissors-PS3/archive/refs/tags/Downloads.zip">Download</a></button>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            <h2>Hello World PS3 App</h2>
+                        </div>
+                        <div class="project-description">
+                            <p>A GUI App for the PS3, merely a test for the greater project, the Rock-Paper-Scissors
+                                Game for the PS3, used in the PS3 Game Video</p>
+                        </div>
+                        <div class="project-actions">
+                            <button><a href="https://github.com/FrontendTitan/Hello-World-PS3" target='_blank'>View
+                                    Source</a></button>
+                            <button><a
+                                    href="https://github.com/FrontendTitan/Hello-World-PS3/archive/refs/tags/Download.zip">Download</a></button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- Entry point of the website -->
         </main>
