Changed Background Position and Movement

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <h2 id='nav-contact-btn'>Contact</h2>
                         <h2 id='nav-projects-btn'>Projects</h2>
                         <h2 id='nav-blog-btn'>Blog</h2>
+                        <h2 id='nav-blog-btn'>PS5</h2>
                     </div>
                 </div>
                 <div id='mobile-socials-display'> <!-- Social Media Logos div -->
@@ -47,7 +48,7 @@
             <!-- Entry point of the website -->
             <div class="body">
                 <div class='banner'>
-                    <img src="/src/assets/banner.png" alt="">
+                    <img src="/src/assets/banner.png" alt="Channel Banner">
                 </div>
 
                 <div class="about-me">
