Test to see if it runs on PS5

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h2 id='nav-contact-btn'>Contact</h2>
                         <h2 id='nav-projects-btn'>Projects</h2>
                         <h2 id='nav-blog-btn'>Blog</h2>
-                        <h2 id='nav-blog-btn'>PS5</h2>
+                        <h2 id='nav-ps5-btn'>PS5</h2>
                     </div>
                 </div>
                 <div id='mobile-socials-display'> <!-- Social Media Logos div -->
