Added temp dev server link

--- a/ps5/index.html
+++ b/ps5/index.html
@@ -47,7 +47,8 @@
             <div class="body">
                 <h1 class='header-h1'>PlayStation 5 Games</h1>
                 <p class='header-p'>Playable on the actual PlayStation 5 Console, by visiting <a
-                        href="https://www.frontendtitan.com/ps5">frontendtitan.com/ps5</a></p><br>
+                        href="https://www.frontendtitan.com/ps5">frontendtitan.com/ps5</a></p>
+                <a href="http://192.168.0.10:5500">DEV SERVER</a><br>
 
                 <div class="flex-body">
                     <div class="card">
